themes/dissent/static/css/mobile.css
body, header {	width: 105vw; max-width: 105vw; }

.menu-row-background, .menu-row {
    display: none;
}

.hamburger-menu {
    display: block;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

label {
    cursor: pointer;
}
label:focus {
    outline: none;
}

.hmenu {
    position: fixed;
    top: 0;
    left: 0;
    background: #5a3d99ee;
    width: 25em;
    height: 100%;
    transform: translate3d(-25em, 0, 0);
    transition: transform 0.35s;
    z-index:3
}
.hmenu label.hmenu-toggle {
    transition:all 0.3s ease-in-out;
    position: fixed;
	top:0;
    right: -6em;
    width: 6em;
    height: 5em;
    line-height: 0px;
    display: block;
    padding: 0;
    text-indent: -9999px;
    background: #fff0 url(/hamburger_menu_icon.svg) 50% 50%/4em 4em no-repeat;
	color: white;
}
#hmenu_checkbox:checked + .hmenu label.hmenu-toggle { right:19em; transition:all 0.3s ease-in-out;}

.hmenu ul {
    list-style-type: none;
    font-size:2.5em;
    text-align: right;
    padding: 0.5em 0.5em 0.5em 0.5em ;
}

.hmenu ul li a, .hmenu ul li label {
    display: block;
    text-decoration: none;
    color: white;
	padding-top:0.5em; padding-bottom:0.5em;
}
.hmenu ul li a:hover, .hmenu ul li label:hover {
    color: #ffe600;
}

/* START Code to move hamburger menu to the right */
.hamburger-menu {width:100vw}
.hmenu { left:unset;right: 0 ; 	transform: translate3d(25em, 0, 0);}
.hmenu label.hmenu-toggle {right:26em;}
.hmenu ul {text-align:left;}
/* END Code to move hamburger menu to the right */


.page-Home .hmenu-Home, .page-About .hmenu-About  , .page-Program .hmenu-Program  , .page-Attendance .hmenu-Attendance , .page-Contact .hmenu-Contact{
	font-weight:bolder;
	color: #ffe600
}


.hmenu ul li {
    border-bottom:1px solid grey;
}

/* hide inputs */
.hmenu-checkbox {
    display: none;
}

/* hide navigation icon for sublabels */
.hmenu .hmenu label.hmenu-toggle {
    background: none;
}

/* fade in checked menu */
#hmenu_checkbox:checked + .hmenu {
    transform: translate3d(0, 0, 0);
}

.hmenu-submenu {
    display: none;
}

.announcement-container { }

.short-about-section-container .text {
    max-width: 80%;
}

.ven-bg {
    /* height: 50%; */
    min-height: unset;
	padding-left:5%; padding-right:5%;
}
.ven-bg .text-container { width:90%; max-width: unset;}
.ven-bg .text-container .body p {font-size:1.7em}


.about-header-container .text-container {
    top: 5%;
}

.contained-backgrounded-text {
    min-height: 84px;
}


/* buttons easily clickable on mobile*/
.button button , a.button {width:auto; height:4rem;font-size:1.5rem;} 
a.button  {line-height:4rem;} 
.features-banner-container .feature-banner {margin-bottom:3rem;}
.features-banner-container .feature-banner .description {font-weight:bold;font-size:larger;}

/* Bigger speakers on mobile*/
.featured-speaker .featured-description {width:100% ;padding-bottom:0.5em;	height: 7em;	margin: -8.4em 0 0 0;}
.page-Home .featured-speaker .featured-description { margin-top: -8.6em }

	

.featured-speaker  .featured-description .name {font-size:1.7em}
.featured-speaker  .featured-description .text {font-size:1.2em}
.featured-speaker , .content-Program .featured-speaker { width: 49vw; position: relative;}
.content-Program .featured-speaker .locator { width:50vw}
.page-Home .featured-speaker .locator { margin-bottom:2em;}

.content-Program .featured-speaker .featured-description { 
	height: 6.5em;
	padding-bottom: 0.2em;
	margin: -8.2em 0 0 0;
}
.content-Program .featured-speaker .locator , .featured-speaker {max-width:unset;}


.visa-assistance {width:90%}

.background-picture-container {max-height:100%; height: 33vh;} /* for landscape*/
.announcement-container > div {  font-size: 2em !important }
.announcement-container .main {  font-size: 2em !important }


.popup {font-size:2em;}
.popup .speaker-img-container {height:auto;}
.popup  button.close { right: -15px;top: -15px; }
.popup > div{
	top:5vh;
	left:5vw;
	width:90vw;
	height:90vh;
	padding:2vh 2vw 2vh 2vw;
}
.popup img.speaker-img { width:25vw; max-width:40vh; max-height:unset; }
.popup .bio {	position:absolute ;bottom:0.5em;left: 0.5em;right:0.5em;top:38vw;overflow-y: auto; font-size:1em}
.popup .featured-description .name {font-size:1em;}


button  {height:auto;font-size:0.8em;}
.content {	padding-top: 140px; }

footer {font-size:1.5em;}
.content-two-columns .left , .content-two-columns .right { display:block; width:100%; font-size:1em; margin-bottom:3em; margin-right:0;}
.content-two-columns .left .contained-backgrounded-text , .content-two-columns .right .contained-backgrounded-text {width:90%}
.content-two-columns .contained-text { text-align:justify; }
.content-two-columns button , .content-two-columns a.button { font-size:2em; }


.content > .title {position:fixed; top: 0; width:100vw;z-index:1 ; font-size: 3em; line-height:0.5em; height:55px;}
.content > .title { /*font-size: 4em; */}
.page-About .content > .title { /*font-size: 3.3em;*/}

.cemb, .ftlb {	width: 60%; margin-left:20%; }
.footer .links a {    display:inline-block; margin: 0 0.1em 0 0.1em; }

#purpose_section {	max-width: 35em; }
.short-about-section-container .text {	max-width: 90%; }
.section-title.title { padding-left:0; width: 90%;  margin: 0 auto 0 auto;}
.page-Home .section-title.title { margin-bottom:1em; font-size:3.8em;}

#contact_us_section .section-title.title { width: 100%; }
.contact-right-image {    width: 330px;}
.ftlb { height:250px;}
#contact_us_section .social-container {width:50px;vertical-align: top;float:right; }
.ftlb > img , .cemb > img {margin-left:0;}
#contact_us_section .social .icon { width:2.2em}

.content-Program .featured-speaker .locator .click_indicator {display:block;}

#contact_us_section .social-container .social a > img {width:3em;}

.content-Program .lineup { margin-left:0;margin-right:0;}
.features-banner-container .feature-banner .number {font-size:4em; height:1em;}
.features-banner-container .feature-banner .description {font-size:3em;}
.features-banner-container {/* width: 100%; */ margin:40px 0 0 0;}

.bg-purple.buy-ticket .title {font-size:3rem;}
.bg-purple.buy-ticket > div {min-width:400px;  max-width:100%;}
.bg-purple.buy-ticket .text {font-size:1.5rem;margin-bottom:1em; font-family:LatoLight;}
.bg-purple.buy-ticket .fee {font-size:2.3rem;}
.bg-purple.buy-ticket { display:block;width: 75vw;} 
.bg-purple.buy-ticket  > div { max-width:100%; margin-bottom:3em;}

.partners-blurb {text-align:justify; margin:5rem;}

.partner-boxes {margin:0 10vw 10vw 10vw ; display :block;}
#become-partner {display:block;position: unset;padding:0; margin-bottom:4rem}
#become-partner > div {padding:2rem; }
#donate-box { display:block;position: unset;}
#donate-box > div {position:unset;}


.partner-logo {width:auto;height:auto; display:block;}
.partner-logo.partner1 , .partner-logo.partner2 , .partner-logo.partner3 , .partner-logo.partner4  {margin:0 0 4em 0;}

.partner-logo a img {width:300px; max-width:unset;}
.partner-logo.partner1 a img { width:330px; max-width:unset;}
.partner-logo.partner2 a img { width:414px; max-width:unset;}
.partner-logo.partner3 a img { width:414px; max-width:unset;}


#organizers_section .aligner .right {text-align:center;}
#organizers_section .contained-image {position:unset; margin-left:auto; margin-right:auto;}

